2013-11-06  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* configure.ac: Detect windows headers/libs after we've figured out the
	C compiler.
	* configure: Regenerate.
	* aclocal.m4: Regenerate.

2013-04-23  Corinna Vinschen  <corinna@vinschen.de>

	* Merge in cygwin-64bit-branch.  See ChangeLog.64bit for details.

2012-11-27  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* Makefile.in: Remove old from CFLAGS and move C*FLAGS so that they can
	be manipulated by Makefile.common.

2012-11-26  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* configure.ac: Rename from configure.in.
	* configure.in: Delete.
	* configure: Regenerate.

2012-11-26  Corinna Vinschen  <corinna@vinschen.de>

	* transport_pipes.cc (pipe_instance_lock_once): Remove.
	(pipe_instance_lock): Remove.
	(pipe_instance): Remove.
	(initialise_pipe_instance_lock): Remove.
	(transport_layer_pipes::accept): Drop entire pipe_instance handling.
	(transport_layer_pipes::close): Ditto.

2012-11-23  Corinna Vinschen  <corinna@vinschen.de>

	* cygserver.cc (main): Call listen right after creating the
	transport.
	* transport_pipes.cc (transport_layer_pipes::listen): Create
	first instance of the named pipe here.  Connect the client side
	to block it for further use by the system.
	(transport_layer_pipes::accept): Don't handle first pipe instance
	here.  Change debug output accordingly.

2012-11-23  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* Makefile.in: Use /bin/mkdir to make install directories.

2012-11-23  Corinna Vinschen  <corinna@vinschen.de>

	* sysv_sem.cc (semundo_clear): Move condition to break from
	inner loop to the right spot.

2012-11-12  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* Makefile.in: Revamp for new configury.
	* configure.in: Revamp for new configury.
	* aclocal.m4: Regenerate.
	* configure: Ditto.
	* autogen.sh: New script.

2012-10-25  Corinna Vinschen  <corinna@vinschen.de>

	* bsd_helper.cc (adjust_identity_info): Fix typo in log message.
