@@ -1,3 +1,13 @@
+2014-03-12  Corinna Vinschen  <corinna@vinschen.de>
+
+	* Throughout, fix format specifiers in debug statements to accommodate
+	x86_64.
+
+2014-03-06  Corinna Vinschen  <corinna@vinschen.de>
+
+	* setpwd.cc (client_request_setpwd::serve): Use RtlSecureZeroMemory to
+	delete password from memory.
+
 2013-11-06  Christopher Faylor  <me.cygwin2013@cgf.cx>
 
 	* configure.ac: Detect windows headers/libs after we've figured out the
